@@ -182,6 +182,8 @@ dependencies {
 
     implementation "io.github.openfeign:feign-httpclient:11.0"
 
+    implementation group: 'net.minidev', name: 'json-smart', version: '2.4.7'
+
     testCompile group: 'io.github.openfeign.form', name: 'feign-form', version: '3.8.0'
     compile group: 'io.github.openfeign.form', name: 'feign-form-spring', version: '3.8.0'
 
@@ -235,6 +237,7 @@ dependencies {
     testCompile group: 'com.xebialabs.restito', name: 'restito', version: '0.9.3'
     testCompile 'io.github.openfeign:feign-jackson:9.7.0'
     testCompile 'pl.allegro.tech:embedded-elasticsearch:2.7.0'
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     // for sonar analysis
     testCompile group: 'org.openid4java', name: 'openid4java', version: '1.0.0'
@@ -249,6 +252,7 @@ dependencies {
         exclude group: 'org.apache.logging.log4j', module: 'log4j-api'
     }
     compile 'org.jooq:jool-java-8:0.9.14'
+
     testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.3.4-prerelease'
     testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
 
@@ -274,7 +278,7 @@ dependencyManagement {
         dependency 'com.google.guava:guava:30.1-jre'
 
         // CVE-2019-0232 - Java and Command Line injections in Windows
-        dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.43') {
+        dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.50') {
             entry 'tomcat-embed-core'
             entry 'tomcat-embed-el'
             entry 'tomcat-embed-websocket'
@@ -725,6 +729,12 @@ sourceSets {
             srcDir('src/contractTest/resources')
         }
     }
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task highLevelDataSetup(type: JavaExec) {
